tests/NormalTests/paczka1/fuzzy1/81296700.err
Error in line 10: Eat1Vx A932 73,1
Error in line 12: Eat1Vx S901 x7,4
Error in line 11: Eat1Vx S901 86,7
Error in line 30: aKVrNAI1MNh S316 -3,8
Error in line 36: EwHRX7a2eh S316 37,5
